# hyperagent

./: .env  .gitignore  AR.md  Cargo.toml  README.md
docs/: QUICKSTART.md  README.md  SKILLS.md  SUMMARY.md  arc2.md  arc2_part2.md
examples/: self_evolving.rs
src/: auto_research.rs  codebase.rs  lib.rs  main.rs  self_evolution.rs  strategy.rs  tools.rs  web.rs
src/agent/: executor.rs  meta_mutator.rs  mod.rs  mutator.rs  population.rs
src/auto_research/: git.rs  log.rs  mod.rs  parsers.rs  prompts.rs  testing.rs  types.rs  web_search.rs
src/eval/: benchmark.rs  evaluator.rs  metrics.rs  mod.rs
src/llm/: client.rs  mod.rs  prompts.rs
src/memory/: archive.rs  lineage.rs  mod.rs
src/runtime/: constraints.rs  environment.rs  local_runtime.rs  loop.rs  loop_.rs  mod.rs  multi_agent_loop.rs  population.rs  selection.rs  state.rs  thermodynamics.rs
