[package]
name = "hyperagent"
version = "0.1.205"
edition = "2021"

[dependencies]
rig-core = "0.33"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"
rand = "0.8"
http = "1"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
thiserror = "1"
regex = "1"
dotenvy = "0.15"
futures = "0.3"

[dev-dependencies]
mockall = "0.12"
reqwest = { version = "0.11", features = ["rustls-tls", "json"] }
tokio-test = "0.4"
tempfile = "3"

[lib]
name = "hyperagent"
path = "src/lib.rs"

[[bin]]
name = "hyperagent"
path = "src/main.rs"
